@@ -50,10 +50,9 @@ import static org.junit.jupiter.api.Assertions.*;
 
 /*
  * @test
- * @bug 8305457 8342936 8351435 8344706
+ * @bug 8305457 8342936 8351435 8344706 8361613
  * @summary java.lang.IO tests
  * @library /test/lib
- * @modules jdk.internal.le
  * @run junit IO
  */
 @ExtendWith(IO.TimingExtension.class)
@@ -78,22 +77,6 @@ public class IO {
             } catch (Exception _) { }
         }
 
-        /*
-         * Unlike printTest, which tests a _default_ console that is normally
-         * jdk.internal.org.jline.JdkConsoleProviderImpl, this test tests
-         * jdk.internal.io.JdkConsoleImpl. Those console implementations operate
-         * in different conditions and, thus, are tested separately.
-         *
-         * To test jdk.internal.io.JdkConsoleImpl one needs to ensure that both
-         * conditions are met:
-         *
-         *   - a non-existent console provider is requested
-         *   - isatty is true
-         *
-         * To achieve isatty, the test currently uses the EXPECT(1) Unix command,
-         * which does not work for Windows. Later, a library like pty4j or JPty
-         * might be used instead of EXPECT, to cover both Unix and Windows.
-         */
         @ParameterizedTest
         @ValueSource(strings = {"println", "print"})
         public void outputTestInteractive(String mode) throws Exception {
@@ -102,8 +85,6 @@ public class IO {
                     expect.toString(),
                     Path.of(testSrc, "output.exp").toAbsolutePath().toString(),
                     System.getProperty("test.jdk") + "/bin/java",
-                    "--enable-preview",
-                    "-Djdk.console=gibberish",
                     Path.of(testSrc, "Output.java").toAbsolutePath().toString(),
                     mode);
             assertEquals(0, output.getExitValue());
@@ -130,7 +111,7 @@ public class IO {
          */
         @ParameterizedTest
         @MethodSource("args")
-        public void inputTestInteractive(String console, String prompt) throws Exception {
+        public void inputTestInteractive(String prompt) throws Exception {
             var testSrc = System.getProperty("test.src", ".");
             var command = new ArrayList<String>();
             command.add(expect.toString());
@@ -138,9 +119,6 @@ public class IO {
                                                                 : "input";
             command.add(Path.of(testSrc, expectInputName + ".exp").toAbsolutePath().toString());
             command.add(System.getProperty("test.jdk") + "/bin/java");
-            command.add("--enable-preview");
-            if (console != null)
-                command.add("-Djdk.console=" + console);
             command.add(Path.of(testSrc, "Input.java").toAbsolutePath().toString());
             command.add(prompt == null ? "0" : PROMPT_NONE.equals(prompt) ? "2" : "1");
             command.add(String.valueOf(prompt));
@@ -152,31 +130,9 @@ public class IO {
         private static final String PROMPT_NONE = "prompt-none";
 
         public static Stream<Arguments> args() {
-            // cross product: consoles x prompts
-            return Stream.of("jdk.internal.le", "gibberish").flatMap(console -> Stream.of(null, "?", "%s", PROMPT_NONE)
-                    .map(prompt -> new String[]{console, prompt}).map(Arguments::of));
+            // prompts
+            return Stream.of(null, "?", "%s", PROMPT_NONE).map(Arguments::of);
         }
-    }
-
-    @ParameterizedTest
-    @ValueSource(strings = {"println", "print"})
-    public void printTest(String mode) throws Exception {
-        var file = Path.of(System.getProperty("test.src", "."), "Output.java")
-                .toAbsolutePath().toString();
-        var pb = ProcessTools.createTestJavaProcessBuilder("-Djdk.console=jdk.internal.le", "--enable-preview", file, mode);
-        OutputAnalyzer output = ProcessTools.executeProcess(pb);
-        assertEquals(0, output.getExitValue());
-        assertTrue(output.getStderr().isEmpty());
-        output.reportDiagnosticSummary();
-        String out = output.getStdout();
-        // The first half of the output is produced by Console, the second
-        // half is produced by IO: those halves must match.
-        // Executing Console and IO in the same VM (as opposed to
-        // consecutive VM runs, which are cleaner) to be able to compare string
-        // representation of objects.
-        assertFalse(out.isBlank());
-        assertEquals(out.substring(0, out.length() / 2),
-                out.substring(out.length() / 2));
     }
 
     @Test //JDK-8342936
@@ -193,7 +149,7 @@ public class IO {
                     }
                     """);
         }
-        var pb = ProcessTools.createTestJavaProcessBuilder("-Djdk.console=jdk.internal.le", "--enable-preview", file.toString());
+        var pb = ProcessTools.createTestJavaProcessBuilder(file.toString());
         OutputAnalyzer output = ProcessTools.executeProcess(pb);
         assertEquals(0, output.getExitValue());
         assertTrue(output.getStderr().isEmpty());
